# anki-de-translation-addon

./: .env.template  .gitignore  Debug wikionary API.ipynb  README.md  justfile  pyproject.toml
addon/: __init__.py  config.json  wiktionary.py
addon/ai/: explain_word.py  prompt_utils.py
addon/ai/prompts/: explain_word.txt
addon/shortcut_actions/: insert_audio_action.py  insert_word_description_action.py
